--- a/app/globals.css
+++ b/app/globals.css
@@ -14,3 +14,14 @@ body {
     linear-gradient(90deg, #01171e 0%, #012732 100%)
   );
 }
+
+/*  */
+.sliderCard {
+  border: 1px solid var(--foreground-night-400, rgba(255, 255, 255, 0.13));
+  background: var(--background-night-900-high-emphasis, #012a36);
+  box-shadow: 0px 32px 40px -2px rgba(0, 0, 0, 0.08),
+    0px 1px 1px 0px rgba(0, 0, 0, 0.08);
+}
+.timeLine {
+  background: var(--foreground-night-300, rgba(255, 255, 255, 0.08));
+}
