--- a/app/globals.css
+++ b/app/globals.css
@@ -15,7 +15,7 @@ body {
   );
 }
 
-/*  */
+/* slider card css =========>  */
 .sliderCard {
   border: 1px solid var(--foreground-night-400, rgba(255, 255, 255, 0.13));
   background: var(--background-night-900-high-emphasis, #012a36);
@@ -25,3 +25,4 @@ body {
 .timeLine {
   background: var(--foreground-night-300, rgba(255, 255, 255, 0.08));
 }
+/* slider card css ends here ==========>  */
