--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -15,14 +15,34 @@ body {
   );
 }
 
-/* slider card css =========>  */
-.sliderCard {
+/* slider card css ==========>  */
+.cardShadow {
   border: 1px solid var(--foreground-night-400, rgba(255, 255, 255, 0.13));
   background: var(--background-night-900-high-emphasis, #012a36);
   box-shadow: 0px 32px 40px -2px rgba(0, 0, 0, 0.08),
     0px 1px 1px 0px rgba(0, 0, 0, 0.08);
 }
+.borderColor {
+  border-color: var(--foreground-night-400, rgba(255, 255, 255, 0.13));
+}
 .timeLine {
   background: var(--foreground-night-300, rgba(255, 255, 255, 0.08));
 }
+.radius {
+  border-bottom-left-radius: 2px;
+  border-bottom-right-radius: 2px;
+}
 /* slider card css ends here ==========>  */
+
+/* buy and sell css =============>  */
+
+.halfBg {
+  background: var(--Danger-500, rgba(249, 86, 79, 0.19));
+}
+/* buy and sell css ends here ============>  */
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
