--- a/app/styles/klinechart.css
+++ b/app/styles/klinechart.css
@@ -21,20 +21,21 @@
 }
 .klinecharts-pro-period-bar .item.selected {
   color: white !important;
-  background-color: #e06c00 !important;
-  border: 2px solid #e06c00 !important;
+  background-color: #012a36 !important;
+  border: 2px solid #012a36 !important;
   border-radius: 8px !important;
 }
 .menu-container svg {
-  fill: #e06c00 !important;
+  fill: white !important;
+  opacity: 0.8;
 }
 .period {
   color: #676767 !important;
-  background-color: #1c2222 !important;
+  background-color: #012a36 !important;
   border-radius: 8px !important;
 }
 .symbol span {
-  color: #e06c00 !important;
+  color: #012a36 !important;
 }
 .klinecharts-pro-widget > div > div:nth-child(2) {
   display: none !important;
