--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -82,5 +82,7 @@ input::-webkit-inner-spin-button {
 }
 
 tspan {
-  font-size: 10px !important;
+  font-size: 14px !important;
+  fill: white !important;
+  opacity: 40%;
 }
